# prism

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: deploy-pages.yml
app/: __init__.py  config.py  main.py  models.py  scheduler.py
app/services/: __init__.py  agent.py  nebius.py  preprocessor.py  simulator.py
frontend/: .env.production  index.html  vite.config.js
frontend/src/: App.jsx  index.css
